{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 81,
  "lineage": "48078c12-61f4-c552-79e1-4416ed891cee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3aefffd3d8e742e",
            "association_id": "eipassoc-0d09c71c4045a0ef0",
            "domain": "vpc",
            "id": "eipalloc-0f3aefffd3d8e742e",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-047b2960ea586de92",
            "private_dns": "ip-10-0-3-252.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.252",
            "public_dns": "ec2-13-215-220-243.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.215.220.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "myip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b76bb3d107c32df5",
            "domain": "vpc",
            "id": "eipalloc-0b76bb3d107c32df5",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-18-136-39-66.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.39.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myinst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-005835d578c62050d",
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:instance/i-0aca03122be97ff28",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aca03122be97ff28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07d9a4c87bf2078b8",
            "private_dns": "ip-10-0-3-121.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.121",
            "public_ip": "13.229.243.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e711b8f97838e78a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c32ee3e096c8e698"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d926b62add412c68",
            "tags": {
              "Name": "mahesh-instance"
            },
            "tags_all": {
              "Name": "mahesh-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c32ee3e096c8e698"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.mysg",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mygateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:internet-gateway/igw-0bc49939df0667ed6",
            "id": "igw-0bc49939df0667ed6",
            "owner_id": "702560669403",
            "tags": {
              "Name": "demo-vpc-ig"
            },
            "tags_all": {
              "Name": "demo-vpc-ig"
            },
            "vpc_id": "vpc-035a147ea30004427"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3aefffd3d8e742e",
            "connectivity_type": "public",
            "id": "nat-02415a300c765be26",
            "network_interface_id": "eni-047b2960ea586de92",
            "private_ip": "10.0.3.252",
            "public_ip": "13.215.220.243",
            "subnet_id": "subnet-0d926b62add412c68",
            "tags": {
              "Name": "Mynat"
            },
            "tags_all": {
              "Name": "Mynat"
            }
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.subnet1",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo-vpc-pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:route-table/rtb-07bea5046fd9ba8dd",
            "id": "rtb-07bea5046fd9ba8dd",
            "owner_id": "702560669403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02415a300c765be26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demovpc-pvt-RT"
            },
            "tags_all": {
              "Name": "demovpc-pvt-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a147ea30004427"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.mynat",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075ebe4f8b7349c71",
            "route_table_id": "rtb-07bea5046fd9ba8dd",
            "subnet_id": "subnet-07c4baae0dea5f3f2"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.mynat",
            "aws_route_table.demo-vpc-pvt",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:security-group/sg-0c32ee3e096c8e698",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c32ee3e096c8e698",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20230110070418524300000001",
            "name_prefix": "terraform-",
            "owner_id": "702560669403",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg-instance"
            },
            "tags_all": {
              "Name": "test-sg-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-035a147ea30004427"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:subnet/subnet-0d926b62add412c68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d926b62add412c68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702560669403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet1"
            },
            "tags_all": {
              "Name": "Subnet1"
            },
            "vpc_id": "vpc-035a147ea30004427"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:subnet/subnet-07c4baae0dea5f3f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c4baae0dea5f3f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702560669403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-035a147ea30004427"
          },
          "dependencies": [
            "aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:702560669403:vpc/vpc-035a147ea30004427",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c2a62d114d2a0b18",
            "default_route_table_id": "rtb-02f0fede954a92a24",
            "default_security_group_id": "sg-0d302eb53e0309596",
            "dhcp_options_id": "dopt-087f4688287c29211",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-035a147ea30004427",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f0fede954a92a24",
            "owner_id": "702560669403",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}